--- a/client/src/sass/components/_btn.scss
+++ b/client/src/sass/components/_btn.scss
@@ -20,7 +20,7 @@
     &--open-battletag {
         width: 25rem;
         border: .1rem solid black;
-        margin:1rem;
+        margin: 0 .5rem 0 .5rem;
     }
     &--login{
         padding: .5rem 0 .5rem 0;
