--- a/client/src/sass/layout/_header.scss
+++ b/client/src/sass/layout/_header.scss
@@ -1,14 +1,10 @@
 .header {
     background: $color-ow-dark-blue;
-    color: rgba(255, 255, 255, .9);
-    line-height: 10rem;
-    height: 100%;
+    height: 20vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     text-align: center;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     border-bottom: 1px solid black;
-    overflow: none;
-    padding: 0 0 1rem 0;
+    overflow: auto;
 }
