--- a/client/src/sass/base/_typography.scss
+++ b/client/src/sass/base/_typography.scss
@@ -109,6 +109,11 @@ ul {
     text-align: center;
     margin: 0 auto;
   }
+  &--add-game{
+    width: 30rem;
+    text-align: center;
+    margin: 0 auto;
+  }
   &--go-back{
     width: 15rem;
     text-align: center;
