--- a/client/src/sass/layout/_container.scss
+++ b/client/src/sass/layout/_container.scss
@@ -15,6 +15,9 @@
   &--active-account{
     flex-direction: column;
   }
+  &--season{
+    flex-direction: column;
+  }
 }
 .section{
   background: rgba(255, 255, 255, 0.466);
