--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@
 h1,
 h2,
 h3 {
-  border: .2rem solid black;
+  border: .1rem solid black;
   padding-left: 3rem;
   background-color: #d38715;
   font-weight: bold;
@@ -59,7 +59,7 @@ ul {
 .nav-link:active {
   font-size: 2rem;
   color: black;
-  border: .2rem solid black;
+  border: .1rem solid black;
   background: #2379cf;
   text-decoration: none; }
 
@@ -88,6 +88,19 @@ ul {
 .nav-link--go-back {
   width: 15rem;
   text-align: center; }
+
+.nav-link--open-modal__battletag {
+  background-color: rgba(255, 255, 255, 0.705);
+  width: 30rem;
+  align-self: center;
+  text-align: center;
+  margin-top: 1rem; }
+
+.nav-link--close-modal__battletag {
+  background-color: rgba(255, 255, 255, 0.705);
+  width: auto;
+  text-align: center;
+  margin-top: 1rem; }
 
 *,
 *::after,
@@ -124,11 +137,8 @@ body {
   font-variant: small-caps; }
 
 .container {
-  background-color: #405275;
-  border: 1px solid black;
   margin: 2rem 1rem 2rem 1rem;
   padding: 1rem;
-  height: 100vh;
   display: flex;
   overflow: auto; }
   .container--main {
@@ -142,7 +152,8 @@ body {
 
 .section {
   background: rgba(255, 255, 255, 0.466);
-  padding: 1rem; }
+  padding: 1rem;
+  border: .1rem solid black; }
   .section:not(:first-child) {
     margin-top: 2rem; }
 
@@ -207,15 +218,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: .1rem solid black;
   margin: 0 0 1rem 0; }
 
 .active-season--cell {
   margin: 0 0 1rem 0; }
 
-.active-season--games {
-  height: 100vh; }
-  .active-season--games--cell {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly; }
+.games--cell {
+  border: .1rem solid black;
+  margin: 0 0 1rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; }
