--- a/client/src/sass/layout/_container.scss
+++ b/client/src/sass/layout/_container.scss
@@ -1,9 +1,7 @@
 .container {
-  background-color: $color-ow-dark-blue;
-  border: 1px solid black;
   margin: 2rem 1rem 2rem 1rem;
   padding: 1rem;
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   overflow: auto;
   &--main {
@@ -22,6 +20,7 @@
 .section{
   background: rgba(255, 255, 255, 0.466);
   padding: 1rem;
+  border: .1rem solid black;
   &:not(:first-child){
     margin-top: 2rem;
   }
