--- a/client/src/sass/layout/_container.scss
+++ b/client/src/sass/layout/_container.scss
@@ -25,4 +25,9 @@
     margin-top: 2rem;
   }
 }
-
+.subsection{
+  background: rgba(255, 255, 255, 0.466);
+  padding: 1rem;
+  border: .1rem solid black;
+  margin-bottom: 1rem;
+}
