tables added to games page. now working on sr incrmentation

--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -11,6 +11,7 @@
 
 @import 'components/battletag-form';
 @import 'components/btn';
+@import 'components/game-table';
 
 @import 'pages/main';
 @import 'pages/account';
