--- a/client/src/App.css
+++ b/client/src/App.css
@@ -221,6 +221,10 @@ body {
     width: 10rem;
     align-self: center; }
 
+.game-table {
+  width: 100%;
+  text-align: center; }
+
 .main-info {
   display: flex;
   flex-direction: column;
