--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -22,3 +22,8 @@ body {
     background-attachment: fixed;
     line-height: 3rem;
 }
+.banner{
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
