--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -5,6 +5,7 @@
 @import 'base/typography';
 @import 'base/base';
 @import 'base/utilities';
+@import 'base/media-queries';
 
 @import 'layout/container';
 @import 'layout/header';
