switching to bootstrap to speed up development

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,299 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Maven+Pro");
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
-@import url("https://fonts.googleapis.com/css?family=Fredoka+One|Permanent+Marker");
-.banner-text {
-  font-variant: normal;
-  font-family: "Pathway Gothic One", sans-serif;
-  font-weight: 900;
-  font-size: 7.3rem;
-  color: white;
-  line-height: 7rem; }
+.header{
+    position: relative;
+}
 
-h1,
-h2,
-h3 {
-  border: .1rem solid black;
-  padding-left: 3rem;
-  background-color: #d38715;
-  font-weight: bold;
-  padding-bottom: .5rem;
-  width: 100%; }
-
-h1 {
-  font-size: 3rem; }
-
-h2 {
-  font-size: 2rem;
-  font-weight: bold; }
-
-.prop {
-  font-family: "Work Sans", sans-serif;
-  font-variant: small-caps; }
-
-a,
-a:link,
-a:hover,
-a:visited,
-a:active {
-  text-decoration: none;
-  color: black; }
-
-a:hover {
-  color: white; }
-
-p {
-  font-weight: bold;
-  font-size: 1.8rem; }
-
-ol,
-li,
-ul {
-  font-weight: bold;
-  font-size: 1.8rem; }
-
-.features-ol {
-  margin-left: 2rem; }
-
-.nav-link:link,
-.nav-link:visited,
-.nav-link:active {
-  font-size: 2rem;
-  color: black;
-  border: .1rem solid black;
-  background: #2379cf;
-  text-decoration: none; }
-
-.nav-link:hover {
-  color: white; }
-
-.nav-link {
-  font-size: 2rem;
-  color: black;
-  border: .1rem solid black;
-  background: #2379cf;
-  text-decoration: none; }
-  .nav-link--battletag {
-    width: auto;
-    margin: 1rem;
-    text-align: center; }
-  .nav-link--login {
-    width: 15rem;
-    align-self: center;
-    position: absolute;
-    bottom: 0;
-    left: 4vw;
-    z-index: 2; }
-  .nav-link--add-season {
-    width: 20rem;
-    margin: 0 auto; }
-  .nav-link--open {
-    text-align: center;
-    width: 20rem;
-    margin: 0 auto; }
-  .nav-link--add-game {
-    width: 30rem;
-    margin: 0 auto; }
-  .nav-link--go-back {
-    width: 20rem;
-    margin-top: .4rem;
-    padding: .2rem .5rem .2rem .5rem; }
-  .nav-link--open-modal__battletag {
-    background-color: rgba(255, 255, 255, 0.705);
-    width: 30rem;
-    align-self: center;
-    text-align: center;
-    margin-top: 1rem; }
-  .nav-link--close-modal__battletag {
-    background-color: rgba(255, 255, 255, 0.705);
-    width: auto;
-    text-align: center;
-    margin-top: 1rem; }
-
-.custom-heading__seasons-box {
-  display: flex;
-  flex-flow: row; }
-  .custom-heading__seasons-box--selected-battletag {
-    margin-right: 2rem; }
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  height: 100%;
-  font-size: 62.5%; }
-
-body {
-  font-family: "Montserrat", sans-serif;
-  font-variant-caps: all-petite-caps;
-  height: 100vh;
-  letter-spacing: .1rem;
-  box-sizing: border-box;
-  background: #43484c;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  line-height: 3rem; }
-
-.banner {
-  height: 100%;
-  width: 100%;
-  position: relative; }
-
-.u-margin-bottom-small {
-  margin-bottom: 1rem; }
-
-.u-margin-top-small {
-  margin-top: 2rem; }
-
-.underline {
-  text-decoration: underline; }
-
-.smallcaps {
-  font-variant: small-caps; }
-
-@media only screen and (min-width: 575px) {
-  .banner-mobile {
-    z-index: 1;
-    display: none; } }
-
-@media only screen and (max-width: 425px) {
-  .nav-link {
-    font-size: 2rem;
-    color: black;
-    border: .1rem solid black;
-    background: #2379cf;
-    text-decoration: none; }
-    .nav-link--login {
-      width: 15rem;
-      position: absolute;
-      transform: translate(-50%, 0%);
-      bottom: 0;
-      left: 50%;
-      z-index: 2; }
-  h2 {
-    text-align: center;
-    padding-left: 0; } }
-
-.container {
-  margin: 2rem 1rem 2rem 1rem;
-  padding: 1rem;
-  display: flex;
-  overflow: auto; }
-  .container--main {
-    flex-flow: column; }
-  .container--notfound {
-    flex-direction: column; }
-  .container--active-account {
-    flex-direction: column; }
-  .container--season {
-    flex-direction: column; }
-
-.section {
-  background: rgba(255, 255, 255, 0.466);
-  padding: 1rem;
-  border: .1rem solid black; }
-  .section:not(:first-child) {
-    margin-top: 2rem; }
-
-.subsection {
-  background: rgba(255, 255, 255, 0.466);
-  padding: 1rem;
-  border: .1rem solid black;
-  margin-bottom: 1rem; }
-
-.header {
-  position: relative;
-  z-index: 0;
-  background: #405275;
-  height: 20vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  text-align: center;
-  border-bottom: 1px solid black;
-  overflow: auto; }
-
-.banner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1; }
-
-.banner-mobile {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1; }
-
-.account-form {
-  display: flex;
-  text-align: center;
-  flex-flow: column;
-  margin-top: 20%; }
-  .account-form__form--BattleTag {
-    height: 2.5rem;
-    border: 1px solid black; }
-  .account-form__form--StartingSR {
-    width: 10rem;
-    border: 1px solid black; }
-
-.form-errors {
-  padding-top: 2rem;
-  padding-bottom: 2rem; }
-
-.btn {
-  padding: .5rem;
-  border: 1px solid black;
-  font-variant-caps: all-petite-caps; }
-  .btn--new-season {
-    width: 15rem;
-    height: auto; }
-  .btn--close-modal {
-    position: absolute;
-    bottom: 5rem; }
-  .btn--add-battletag {
-    width: 20rem;
-    align-self: center;
-    margin: 1rem 0 0 0; }
-  .btn--open-battletag {
-    width: 25rem;
-    border: .1rem solid black;
-    margin: 0 .5rem 0 .5rem; }
-  .btn--login {
-    padding: .5rem 0 .5rem 0;
-    width: 10rem;
-    align-self: center; }
-
-.game-table {
-  width: 100%;
-  text-align: center; }
-
-.main-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-
-.battletags__yes {
-  display: flex;
-  flex-direction: column; }
-
-.season--cell {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 0 1rem 0; }
-
-.active-season--cell {
-  margin: 0 0 1rem 0; }
-
-.games--cell {
-  border: .1rem solid black;
-  margin: 0 0 1rem 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly; }
+.login,
+.logout{
+position: absolute;
+bottom: 0;
+}
